# wasmscanify

./: .gitignore  Cargo.toml  README.md  benchmark.html  justfile
.cargo/: config.toml
benches/: detect_document.rs  perspective_transform.rs
examples/: profile.rs
src/: detect_document.rs  find_contours.rs  gpu.rs  lib.rs  lib_bak.rs  lib_gpu_bak.rs  shader.wgsl
