[package]
name = "wasmcanify"
version = "1.4.0"
authors = [""]
edition = "2021"
license = "MIT"
description = "Rust WASM port of jscanify - document scanner library"
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Navigator",
    "Gpu",
] }
#wasm-bindgen-futures = "0.4"
#js-sys = "0.3"
#futures-channel = "0.3"
#nalgebra = "0.33"
#wgpu = "22"
#bytemuck = { version = "1.14", features = ["derive"] }
imageproc = "0.25"
image = { version = "0.25.9"}
itertools = "0.14.0"
# rayon-wasm = "1.6.2"
# gloo-console = "0.3.0"

[features]
default = []

[dev-dependencies]
#wasm-bindgen-test = "0.3"
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "detect_document"
harness = false

[profile.release]
#opt-level = "z"
#lto = true
#codegen-units = 1
# debug = true

[profile.bench]
debug = true

[profile.profiling]
inherits = "release"
debug = true